--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -36,6 +36,10 @@ jobs:
       # 12
       - name: Get dependencies
         run: flutter pub get
+      #13
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.1.1
+
 
       # Runs a set of commands using the runners shell
       - name: Start release build
