--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -43,5 +43,11 @@ jobs:
       - name: Start release build
         run: flutter build appbundle
       #13
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: path/to/artifact
+          
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2.1.1
