--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: my-artifact
-          path: path/to/artifact
+          name: androidBuild
+          path: build/
           
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2.1.1
