--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: androidBuild
-          path: build/
+          path: build/app/outputs/bundle/release/app-release.aab
           
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2.1.1
