--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -45,16 +45,9 @@ jobs:
         
     
 
-      - name: Convert aab to apk
-        id: convert_aab
-        uses: mukeshsolanki/bundletool-action@v1.0.0
-        with:
-         aabFile: app/build/outputs/bundle/release/app-release.aab
-         base64Keystore: ${{ secrets.BASE64_KEY }}
-         keystorePassword: ${{ secrets.PASSWORD }}
-         keystoreAlias: ${{ secrets.ALIAS }}
-         keyPassword: ${{ secrets.PASSWORD }}
-         bundletoolVersion: '1.9.0'
+      - name: BundleTool Action
+        uses: mukeshsolanki/bundletool-action@v1.0.1
+
 
       - uses: actions/upload-artifact@v3
         with:
