--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -45,8 +45,16 @@ jobs:
         
     
 
-      - name: BundleTool Action
-        uses: mukeshsolanki/bundletool-action@v1.0.1
+      - name: Sign AAB file
+        uses: kylehennig/bundletool-action@v1
+        with:
+         args: sign-bundle
+        env:
+         KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
+         KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+         KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+         BUNDLE_FILE: path/to/your/app.aab
 
 
       - uses: actions/upload-artifact@v3
