--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -52,7 +52,7 @@ jobs:
          base64Keystore: ${{ secrets.KEYSTORE_FILE }}
          keystorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
          keystoreAlias: ${{ secrets.KEY_ALIAS }}
-         keyPassword: ${{ secrets.KEY_PASSWORD }}
+         keyPassword: ${{ secrets.KEYSTORE_PASSWORD }}
          bundletoolVersion: '1.9.0'
 
       - uses: actions/upload-artifact@v3
