--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -4,7 +4,7 @@ name: Android Release
 on:
   # 2
   push:
-    branches: [ "main" , "develop" ]
+    branches: [ "main" , "dev" ]
   pull_request:
     branches: [ "main" ]
 
