--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   sqflite:
   path:
+  shared_preferences: ^2.0.8
+
 
 
   # The following adds the Cupertino Icons font to your application.
